# TRNovel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  fanqie-web.v2.json  lefthook.yaml  release.sh  release.toml  todo.md
.claude/: settings.json
.claude/skills/dev-workflow/: SKILL.md
.github/workflows/: cd.yml  ci.yml  docs.yaml  publish-npm.yml  publish.yaml  trnovel-release.yml
crates/novel-tts/: Cargo.toml  README.md
crates/novel-tts/examples/: basic.rs
crates/novel-tts/src/: chapter.rs  download.rs  error.rs  lib.rs  model.rs  player.rs  utils.rs
crates/novel-tts/src/queue/: mod.rs  queue_input.rs  queue_output.rs  sound_or_silence.rs
crates/parse-book-source/: CHANGELOG.md  Cargo.toml  book-source.schema.json
crates/parse-book-source/examples/: browser_login.rs  engine_search_poc.rs  gen_schema.rs  spa_search_poc.rs
crates/parse-book-source/examples/json/src/: main.rs
crates/parse-book-source/src/: backend.rs  browser.rs  cookie.rs  engine.rs  error.rs  eval.rs  fetch.rs  host.rs  js.rs  lib.rs  model.rs  source.rs  state.rs  transform.rs  verify.rs  xpath.rs
crates/parse-book-source/src/analyzer/: mod.rs
crates/parse-book-source/src/book_source/: rule.rs
crates/parse-book-source/src/engine/: internal.rs  mod.rs  tests.rs
crates/parse-book-source/src/eval/: backend.rs  js.rs  mod.rs  xpath.rs
crates/parse-book-source/src/fetch/: cookie.rs  mod.rs
crates/parse-book-source/src/fetch/browser/: escalating.rs  fetcher.rs  mod.rs
crates/parse-book-source/src/host/: mod.rs  register.rs  state.rs  tests.rs
crates/parse-book-source/src/http_client/rate_limiter/: token_bucket.rs
crates/parse-book-source/src/source/: clean.rs  http.rs  mod.rs  op.rs  rule.rs
crates/parse-book-source/src/utils/: mod.rs
dev-notes/blog/: cargo-dist.md  chromiumoxide-and-anti-scraping.md  font-anti-scraping-and-fontmap.md  trnovel-booksource-engine.md  trnovel-keeping-up.md
dev-notes/knowledge/: booksource.md  toolchain.md  tui-ratatui-kit.md
docs/: astro.config.mjs  biome.json  package.json  pnpm-lock.yaml
docs/public/: test.json
docs/src/components/: DownloadCard.astro
docs/src/styles/: landing.css
docs/tapes/: README.md  browser-challenge.tape  history.tape  home.tape  local-path.tape  local-select.tape  login-fanqie.tape  login.tape  network-read.tape  network-search.tape  network-source.tape  read.tape  shortcuts.tape  theme.tape  tts-play.tape  tts-settings.tape
openspec/changes/ai-friendly-book-source/: design.md  proposal.md  tasks.md
openspec/changes/browser-fetcher/: design.md  proposal.md  tasks.md
openspec/changes/browser-pool/: design.md  proposal.md  tasks.md
openspec/changes/configurable-keybindings/: design.md  keybindings.example.toml  proposal.md  tasks.md
openspec/changes/dynamic-explore-entries/: design.md  tasks.md
openspec/changes/global-state-to-atom/: design.md  proposal.md  tasks.md
openspec/changes/js-host-bridge/: design.md  proposal.md  tasks.md
openspec/changes/js-rule-engine/: proposal.md  tasks.md
openspec/changes/list-has-more/: design.md  proposal.md  tasks.md
openspec/changes/native-crypto-transforms/: design.md  tasks.md
openspec/changes/refactor-theme-system/: design.md  proposal.md  tasks.md
openspec/changes/render-dual-source/: design.md  proposal.md  tasks.md
openspec/changes/render-fetcher/: design.md  proposal.md  tasks.md
openspec/changes/render-list-pagination/: design.md  proposal.md  tasks.md
openspec/changes/search-click-pagination/: design.md  proposal.md  tasks.md
openspec/changes/toc-rule-engine/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-ratatui-kit-07/: design.md  proposal.md  tasks.md
openspec/changes/xpath-backend/: proposal.md  tasks.md
parse-book-source/: .gitignore  Cargo.toml  README.md
parse-book-source/examples/json/: Cargo.toml
parse-book-source/examples/json/src/: main.rs
parse-book-source/src/: download.rs  error.rs  lib.rs
parse-book-source/src/analyzer/: analyzer_manager.rs  default.rs  html.rs  json.rs  mod.rs
parse-book-source/src/book/: book_list.rs  chapter_list.rs  info.rs  mod.rs
parse-book-source/src/book_source/: http_config.rs  mod.rs  rule.rs
parse-book-source/src/http_client/: mod.rs
parse-book-source/src/http_client/rate_limiter/: mod.rs  token_bucket.rs
parse-book-source/src/source/: json_source.rs  mod.rs
skill-evals/booksource-generator/iteration-1/: benchmark.json  benchmark.md  review.html
skills/booksource-generator/: SKILL.md
skills/booksource-generator/evals/: evals.json
skills/booksource-generator/references/: book-source.schema.json  example-bilixs.v2.json  example-shuhai.v2.json  reverse-engineering.md
skills/booksource-generator/scripts/: validate.sh
src/: actions.rs  browser_assist.rs  chapter_tts.rs  doctor.rs  errors.rs  events.rs  file_list.rs  gen_fontmap.rs  history.rs  import.rs  lib.rs  login.rs  main.rs  quick_start.rs  routes.rs  state.rs  utils.rs
src/app/: layout.rs  mod.rs  mode.rs  state.rs
src/cache/: book_source.rs  local_novel.rs  mod.rs  network_novel.rs  setting.rs  source_state.rs  tts.rs
src/cache/history/: mod.rs
src/components/: empty.rs  file_select.rs  flex.rs  list_select.rs  list_view.rs  loading.rs  loading_page.rs  loading_wrapper.rs  mod.rs  multi_list_select.rs  page.rs  read_novel.rs  search.rs  search_input.rs  select.rs  warning.rs  widget_wrapper.rs
src/components/modal/: browser_prompt.rs  confirm.rs  info.rs  loading.rs  mod.rs  shortcut_info_modal.rs  warning.rs
src/history/: mod.rs
src/hooks/: mod.rs  use_debounce_effect.rs  use_init_state.rs  use_scrollbar.rs  use_theme_token.rs
src/keymap/: mod.rs  tests.rs
src/network_app/: mod.rs  routes.rs
src/novel/: line_adapter.rs  local_novel.rs  mod.rs  network_novel.rs  new_local_novel.rs  novel.rs  novel_core.rs  text.rs  toc_rule.rs
src/pages/: home.rs  mod.rs  playground.rs  select_history.rs  select_history2.rs
src/router/: mod.rs  navigator.rs
src/routes/: mod.rs  route.rs
src/theme/: mod.rs
tests/: toc_ground_truth.rs
(+137 files in other folders)
