[package]
name = "parse-book-source"
version = "0.1.4"
edition = "2021"
description = "Terminal reader for novel"
authors = ["yexiyue <yexiyue666@qq.com>"]
license = "MIT"
keywords = ["CLI", "Terminal", "Novel", "Reader"]
repository = "https://github.com/yexiyue/parse-book-source"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "cookies"] }
jsonpath-rust = "0.7.3"
lazy_static = "1.5.0"
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
scraper = "0.22.0"


# scraper = "0.21.0"
# chrono = { version = "0.4.38", features = ["serde"] }
# base64 = "0.22.1"
# cbc = "0.1.2"
# ring = { version = "0.17.8", features = ["std"] }
# aes = { version = "0.8.4", features = ["hazmat"] }
