[package]
name = "novel-tts"
version = "0.2.0"
edition = "2024"
description = "Terminal reader for novel"
authors = ["yexiyue <yexiyue666@qq.com>"]
license = "MIT"
keywords = ["Novel", "TTS"]
repository = "https://github.com/yexiyue/parse-book-source"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
futures.workspace = true
kokoro-tts = "=0.3.3"
# kokoro-tts 对 ort 声明宽松的预发布范围;钉死已知可用的 ORT 包装版本(对齐 onnxruntime 1.24)。
ort = "=2.0.0-rc.12"
regex.workspace = true
# kokoro-tts = { path = "/Users/yexiyue/rust-project/kokoro" }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "cookies",
] }
rodio = { version = "0.21.1", default-features = false, features = [
    "playback",
    "wav",
    "tracing"
] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
